[package]
name = "expiringmap"
version = "0.1.0"
edition = "2021"
description = "an AHashMap-backed TTL map"
keywords = ["ttl", "cache"]
categories = ["data-structures"]
readme = "README.md"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/randomairborne/expiringmap"

[dependencies]
ahash = "0.8"
